base/grafana-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: grafana
  labels:
    app: digilog
    tier: logging
    run: grafana
spec:
  serviceName: grafana
  replicas: 1
  selector:
    matchLabels:
      app: digilog
      tier: logging
      run: grafana
  template:
    metadata:
      labels:
        app: digilog
        tier: logging
        run: grafana
    spec:
      containers:
        - name: digilog-grafana
          image: grafana/grafana:8.5.2
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /var/lib/grafana
              name: grafana-vol
              subPath: grafana
      volumes:
        - name: grafana-vol
          persistentVolumeClaim:
            claimName: grafana-pvc
