base/loki-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  labels:
    app: digilog
    tier: logging
    run: loki
spec:
  serviceName: loki
  replicas: 1
  selector:
    matchLabels:
      app: digilog
      tier: logging
      run: loki
  template:
    metadata:
      labels:
        app: digilog
        tier: logging
        run: loki
    spec:
      containers:
        - name: digilog-loki
          image: grafana/loki:v2.5.0-with-pr-6123-a630ae3
          ports:
            - containerPort: 3100
          volumeMounts:
            - mountPath: /loki
              name: loki-vol
              subPath: loki
      volumes:
        - name: loki-vol
          persistentVolumeClaim:
            claimName: loki-pvc
