base/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: digilog
    tier: storage
    run: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digilog
      tier: storage
      run: mongodb
  template:
    metadata:
      labels:
        app: digilog
        tier: storage
        run: mongodb
    spec:
      containers:
      - name: digilog-mongodb
        image: mongo:5.0.6
        ports:
        - containerPort: 27017
        volumeMounts:
        - mountPath: "/data/db"
          name: mongodb-data
      volumes:
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongodb-pvc
