base/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: digilog
    tier: storage
    run: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digilog
      tier: storage
      run: postgres
  template:
    metadata:
      labels:
        app: digilog
        tier: storage
        run: postgres
    spec:
      containers:
      - name: digilog-postgres
        image: postgres:13.0
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: "/var/lib/postgresql/data"
          name: postgres-data
          subPath: postgres
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
