base/pytest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pytest-deployment
  labels:
    app: digilog
    tier: logging
    run: pytest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digilog
      tier: logging
      run: pytest
  template:
    metadata:
      labels:
        app: digilog
        tier: logging
        run: pytest
    spec:
      containers:
      - name: pytest
        image: python:3.10-slim
        command: ["python"]
        args: ["/tmp/test/main.py"]
        volumeMounts:
        - mountPath: "/tmp/test/"
          name: mypd
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: myclaim
