base/scrapy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: digilog
    run: scrapy
    tier: crawling
  name: scrapy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digilog
      run: scrapy
      tier: crawling
  template:
    metadata:
      labels:
        app: digilog
        run: scrapy
        tier: crawling
    spec:
      containers:
      - args:
        - /src/queue_processor.py
        command:
        - python
        image: trephor/digilog-scrapy:0.2.1
        name: digilog-scrapy
        volumeMounts:
        - mountPath: /var/log/scrapy
          name: scrapy-logs
      - env:
        - name: LOKI_URL
          value: http://$(LOKI_SERVICE_HOST):$(LOKI_SERVICE_PORT)
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        image: grafana/fluent-plugin-loki:main-d320873-amd64
        name: scrapy-fluentd
        volumeMounts:
        - mountPath: /var/log/scrapy
          name: scrapy-logs
        - mountPath: /fluentd/etc
          name: fluentd-conf
      volumes:
      - emptyDir: {}
        name: scrapy-logs
      - configMap:
          name: scrapy-fluent-cm
        name: fluentd-conf
