base/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  labels:
    app: digilog
    tier: frontend
    run: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: digilog
      tier: frontend
      run: web
  template:
    metadata:
      labels:
        app: digilog
        tier: frontend
        run: web
    spec:
      containers:
      - name: digilog-web
        image: trephor/digilog-web
        ports:
        - containerPort: 5000
        volumeMounts:
          - mountPath: /etc/gunicorn.conf.py
            name: gunicorn-conf
            subPath: /etc/gunicorn.conf.py
          - mountPath: /var/log/gunicorn/access
            name: gunicorn-access
          - mountPath: /var/log/gunicorn/error
            name: gunicorn-error
      - name: web-fluentd
        image: grafana/fluent-plugin-loki:main-d320873-amd64
        volumeMounts:
          - mountPath: /var/log/access
            name: gunicorn-access
          - mountPath: /var/log/error
            name: gunicorn-error
      volumes:
        - name: gunicorn-conf
          configMap:
            name: gunicorn-cm
        - name: gunicorn-access
          emptyDir: {}
        - name: gunicorn-error
          emptyDir: {}
