base/fluentd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluentd-service
  labels:
    app: digilog
    tier: logging
    run: fluentd
spec:
  ports:
    - name: digilog-fluentd-tcp
      port: 24224
      protocol: TCP
    - name: digilog-fluentd-udp
      port: 24224
      protocol: UDP
  selector:
    app: digilog
    tier: logging
    run: fluentd
