base/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app: digilog
    tier: logging
    run: grafana
  ports:
    - protocol: TCP
      port: 3000
