base/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki
  labels:
    app: digilog
    tier: logging
    run: loki
spec:
  ports:
    - port: 3100
      protocol: TCP
  selector:
    app: digilog
    tier: logging
    run: loki
