base/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: digilog
    tier: storage
    run: mongodb
  ports:
    - protocol: TCP
      port: 27017
