base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: digilog
    tier: storage
    run: postgres
  ports:
    - protocol: TCP
      port: 5432
