base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: digilog
    tier: frontend
    run: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
